# BrickGame

./: FSM.md  README-Simple.md  README.md
code-samples/frogger/: frogger
src/: CMakeLists.txt  Doxyfile  Makefile  brick_game.c  brick_game.cc  brick_game.h  common.h
src/app/: cli.cc  desktop.cc
src/brick_game/: common.h
src/brick_game/snake/: snake_model.cc
src/brick_game/snake/include/: model.h  snake.h
src/brick_game/snake/modules/: model.cc  model.cpp  snake.cc
src/brick_game/tetris/: figures.c  model.c  operations.c  tetris.h
src/brick_game/tetris/include/: backend.h  checks.h  common.h  common_module.h  defines.h  figure_generator.h  figures.h  fsm.h  init.h  model.h  objects.h  operations.h  types.h
src/brick_game/tetris/modules/: backend.c  checks.c  figure_generator.c  figures.c  fsm.c  init.c  operations.c
src/common/: common.c
src/common/include/: common.h  enums.h  types.h
src/common/modules/: common.c
src/controller/: controller.cc
src/controller/include/: controller.h
src/controller/modules/: controller.cc
src/controller/snake/include/: controller.h
src/controller/snake/modules/: controller.cc
src/controller/tetris/include/: controller.h
src/controller/tetris/modules/: controller.c
src/gui/cli/: render.c  view.c
src/gui/cli/include/: common_gui.h  defines.h  field_gui.h  field_renderer.h  field_view.h  frontend.h  init_gui.h  init_view.h  input_gui.h  settings.h  view.h
src/gui/cli/modules/: field_gui.c  field_renderer.c  field_view.c  frontend.c  init_gui.c  init_view.c  input_gui.c  view.c
src/gui/desktop/: CMakeLists.txt  desktop_view.cc  main_window.cc  scoreboard.cc  tetris_controller.cpp  tetris_controller.h
src/gui/desktop/BrickGame_desktop/: CMakeLists.txt
src/gui/desktop/Desktop/: Desktop.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tetris_controller.cpp  tetris_controller.h  tetris_view.cpp  tetris_view.h
src/gui/desktop/tetris/: CMakeLists.txt
src/include/common/: common.h  game_info.h
src/include/controller/: controller.h
src/include/gui/cli/: render.h  types.h  view.h
src/include/gui/desktop/: desktop_view.h  main_window.h  scoreboard.h
src/include/interfaces/: IModel.h
src/include/snake/: snake_model.h
src/include/tetris/: figures.h  model.h  operations.h  types.h
src/include/wrappers/: cli_view.h  tetris_model.h
src/interfaces/: IModel.h  IView.h  interfaces.h
src/tests/: main_test.c  main_test.cc  main_test.h
src/tests/include/: main_test.h  snake_test.h
src/tests/include_test/: checks_test.h  figures_test.h  fsm_test.h  init_test.h  operations_test.h
src/tests/modules/: controller_test.cc  model_test.cc  snake_test.cc  tetris_test.cc
src/tests/modules_test/: checks_test.c  figures_test.c  fsm_test.c  init_test.c  operations_test.c
src/wrappers/: cli_view.cc  tetris_model.cc
src/wrappers/tetris/: model.cc  model.h
